--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>¡NOS CASAMOS!</h1>
-<p>Amalia and Gary are getting married!</br>27 March 2016</p>
+<div class="page-header text-center container">
+  <h1><small>27 March 2016</small></br>Amalia and Gary</br><small>¡nos casamos!</small></h1>
+</div>
