--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,26 @@
+
 <div class="page-header text-center container">
-  <h1><small>27 March 2016</small></br>Amalia and Gary</br><small>¡nos casamos!</small></h1>
+  
+  <div class="well">
+  	<div class="page-header">
+  		<h1><small>27 March 2016</small></br>Amàlia and Gary</br><small>¡nos casamos!</small></h1>
+		</div>
+
+  	<div class="">
+	  	<div class="row">
+	  		<div class="hidden-xs col-md-4">
+	  		</div>
+				<div class="col-xs-12 col-md-4">
+					<h3>Bienvenido</h3>
+					<%= image_tag "Amalia&Gary_037.jpg", class: "thumbnail img-responsive center-block" %>
+					<p>As Amàlia and Gary formally begin a life together, we invite our community of family and friends to participate and welcome us into the next chapter of our lives together.</p>
+					<p>We invite our community of family and friends to participate and welcome us into the next chapter of our lives together.</p>
+				</div>
+			</div>	
+		</div>
+
+  </div>
+
+	
 </div>
+
