added nav page and crop photos

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,8 @@
 @import 'bootstrap';
 
 .well {
-	background-color: rgba(255, 204, 0, 0.4);
+	background-color: rgba(191, 173, 152, 0.6);
 	/*minion yellow: pantone #ffcc00*/
-	border-color: #39879E;
+	border-color: rgba(191, 173, 152, 0.4);
+	/* un azul que me gusta #39879E;*/
 }
