--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,11 +10,12 @@
 	  	<div class="row">
 	  		<div class="hidden-xs col-md-4">
 	  		</div>
-				<div class="col-xs-12 col-md-4">
-					<h3>Bienvenido</h3>
-					<%= image_tag "Amalia&Gary_037.jpg", class: "thumbnail img-responsive center-block" %>
-					<p>As Amàlia and Gary formally begin a life together, we invite our community of family and friends to participate and welcome us into the next chapter of our lives together.</p>
-					<p>We invite our community of family and friends to participate and welcome us into the next chapter of our lives together.</p>
+				<div class="col-xs-8 col-md-4">
+					<!-- <h3>Bienvenido</h3> -->
+<!-- 					<%= image_tag "Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block" %>
+					<%= link_to "Navigation",  navigation_path %> -->
+					
+					<%= link_to image_tag("Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block"), navigation_path %>
 				</div>
 			</div>	
 		</div>
