--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,8 +1,14 @@
 @import 'bootstrap';
 
 .well {
-	background-color: rgba(191, 173, 152, 0.6);
+	background-color: rgba(191, 173, 152, 0.85);
 	/*minion yellow: pantone #ffcc00*/
 	border-color: rgba(191, 173, 152, 0.4);
 	/* un azul que me gusta #39879E;*/
+
+}
+.text-primary {
+	color: #1719A2;
+	font-size: 18px;
+	/*text color -- for sub headings*/
 }
