--- a/app/views/pages/navigation.html.erb
+++ b/app/views/pages/navigation.html.erb
@@ -1,23 +1,32 @@
-<h1>Pages#navigation</h1>
-<p>Find me in app/views/pages/navigation.html.erb</p>
-
-
 <div class="page-header text-center container">
   
   <div class="well">
   	<div class="page-header">
-  		<h1><small>27 March 2016</small></br>Amàlia and Gary</br><small>¡nos casamos!</small></h1>
+  		<p class="text-primary">27 March 2016</p>
+  		<h1>Amàlia and Gary</h1>
+  		<p class="text-primary">¡nos casamos!</p>
 		</div>
 	
 	
 
 		<div class="">
 		  	<div class="row">
-		  		<div class="hidden-xs col-md-4">
+		  		<div class="pull-left col-xs-12 col-md-6">
+		  			<h1>Stuff</h1>
+		  			<%= link_to "home",  root_path %>
+		  			<%= link_to "Navigation",  navigation_path %>
 		  		</div>
-					<div class="col-xs-8 col-md-4">
+					<div class="pull-right col-xs-12 col-md-6">
+						<h1>Stuff 2</h1>
+						<%= link_to "Navigation",  navigation_path %>
+						<%= link_to "Navigation",  navigation_path %>
+					</div>
+		  		
+		  		<!-- <div class="hidden-xs col-md-4">
+		  		</div> -->
+					<div class="col-xs-12 col-md-12">
 <!-- 						<p>As Amàlia and Gary formally begin a life together, we invite our community of family and friends to participate and welcome us into the next chapter of our lives together.</p> -->
-						<p>Come welcome us into the next chapter of our lives together.</p>
+						<p class="text-primary">Come welcome us into the next chapter of our lives together.</p>
 
 					</div>
 				</div>	
