added info pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,27 +1,20 @@
 
 <div class="page-header text-center container">
-  
+
   <div class="well">
-  	<div class="page-header">
-  		<h1><small>27 March 2016</small></br>Amàlia and Gary</br><small>¡nos casamos!</small></h1>
-		</div>
+    <%= render 'layouts/header' %>
 
-  	<div class="">
-	  	<div class="row">
-	  		<div class="hidden-xs col-md-4">
-	  		</div>
-				<div class="col-xs-8 col-md-4">
-					<!-- <h3>Bienvenido</h3> -->
-<!-- 					<%= image_tag "Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block" %>
-					<%= link_to "Navigation",  navigation_path %> -->
-					
-					<%= link_to image_tag("Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block"), navigation_path %>
-				</div>
-			</div>	
-		</div>
+    <div class="row">
+      <div class="hidden-xs col-md-4">
+      </div>
+      <div class="col-xs-12 col-md-4">
+        <!-- <h3>Bienvenido</h3> -->
+<!--          <%= image_tag "Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block" %>
+        <%= link_to "Navigation",  navigation_path %> -->
 
+        <%= link_to image_tag("Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block"), navigation_path %>
+      </div>
+    </div>
   </div>
-
-	
 </div>
 
