aded photos of location

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,10 +9,10 @@
       </div>
       <div class="col-xs-12 col-md-4">
         <!-- <h3>Bienvenido</h3> -->
-<!--          <%= image_tag "Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block" %>
+        <!--<%= image_tag "Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block" %>
         <%= link_to "Navigation",  navigation_path %> -->
-
         <%= link_to image_tag("Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block"), navigation_path %>
+        <p class="text-primary">¡nos casamos!</p>
       </div>
     </div>
   </div>
