--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#location</h1>
-<p>Find me in app/views/pages/location.html.erb</p>
+<div class="page-header text-center container">
+
+  <div class="well">
+    <%= render 'layouts/header' %>
+    <div class="row">
+      <div class="col-xs-12 col-md-12 text-primary"><h2>The Brazilian Room</h2></div>
+      <div class="pull-left col-xs-12 col-md-6">
+        <h3>Tilden Regional Park<br/>Berkeley, California</h3>
+      </div>
+      <div class="pull-right col-xs-12 col-md-6">
+        <%= image_tag "BrazilianRoom.jpeg"%>
+      </div>
+    </div>
+  </div>
+</div>
