added notes for location

--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -10,6 +10,10 @@
       <div class="pull-right col-xs-12 col-md-6">
         <%= image_tag "BrazilianRoom.jpeg"%>
       </div>
+      <p>Driving Directions</p>
+      <p>From San Francisco</p>
+      <p>From Oakland I-580</p>
+      <p>From Elsewhere</p>
     </div>
   </div>
 </div>
