--- a/app/views/pages/navigation.html.erb
+++ b/app/views/pages/navigation.html.erb
@@ -6,13 +6,13 @@
     <div class="row">
       <div class="pull-left col-xs-12 col-md-6">
         <h1>Stuff</h1>
-        <%= link_to "home",  root_path %><br/>
-        <%= link_to "location",  location_path %>
+        <%= link_to "home",  root_path, class: "btn btn-default", role: "button" %><br/>
+        <%= link_to "location",  location_path, class: "btn btn-default" %>
       </div>
       <div class="pull-right col-xs-12 col-md-6">
         <h1>Stuff 2</h1>
-        <%= link_to "About Us",  about_path %><br/>
-        <%= link_to "Wedding Day",  wedding_path %>
+        <%= link_to "About Us",  about_path, class: "btn btn-default" %><br/>
+        <%= link_to "Wedding Day",  wedding_path, class: "btn btn-default" %>
       </div>
 
       <!-- <div class="hidden-xs col-md-4">
