changed wording for our story

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,38 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="page-header text-center container">
+<style type="text/css">
+  @font-face {
+    font-family: 'scripalt-webfont';
+    src:font-url('scripalt-webfont.eot');
+    src:font-url('scripalt-webfont.eot') format('embedded-opentype'),
+      font-url('scripalt-webfont.svg') format('svg'),
+      font-url('scripalt-webfont.woff') format('woff'),
+      font-url('scripalt-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+</style>
+
+  <div class="well">
+  <%= link_to "home",  root_path, class: "btn btn-link pull-left", type: "button" %>
+    <%= render 'layouts/header' %>
+
+    <div class="row">
+      <p>“I love you without knowing how, or when, or from where. I love you simply, without problems or pride: I love you in this way because I do not know any other way of loving but this, in which there is no I or you, so intimate that your hand upon my chest is my hand, so intimate that when I fall asleep your eyes close.”<br/>― Pablo Neruda</p>
+      <div class="pull-left col-xs-12 col-md-6">
+
+      </div>
+      <div class="pull-right col-xs-12 col-md-6">
+        <h1 style="font-family: scripalt-webfont;">La historia de Amàlia y Gary</h1>
+        <!-- <p>Amàlia and Gary</p> -->
+
+        <p>Our Love story starts with a chance meeting, unexpected and spontaneous. </p>
+        <p>Amàlia moved to the United States in April 2013, to Oakland. Renting a car to start, she bought her first car on June 1st 2013 and promptly returned her rental the next day to the airport. After returning the car, she ventured to the train platform to head home when a stranger walked up to her and pointed out that: 'You don't have luggage!'. Following the european tradition of rarely talking to strangers in public transports, she first ignored the spontaneous salutation...</p>
+        <p>Gary, living in San Francisco, went to Denver, Colorado, that same weekend, to see two amazing people tying the knot and celebrate their big day. Flying home Sunday afternoon, he was in a great mood! Walking from the airplane to the SFO Bart station, suddenly he sees this gorgeous lady standing in front of him at the bottom of the escalator. Let's say hi!</p>
+        <p>...</p>
+        <p>She didn't answer!<br/>Should I walk away, or ... eh, let's say hello once more...</p>
+        <p> Amalia then took the hint and answered. They started chatting about what is she doing there, what is he doing there, Yosemite and camping... 1h went by and Gary almost missed his stop. Before jumping out of the train he asked her number. And got it.</p>
+      </div>
+    </div>
+
+  </div>
+</div>
