--- a/app/views/pages/navigation.html.erb
+++ b/app/views/pages/navigation.html.erb
@@ -1,18 +1,18 @@
 <div class="page-header text-center container">
 
   <div class="well">
+  <%= link_to "home",  root_path, class: "btn btn-link pull-left", type: "button" %>
     <%= render 'layouts/header' %>
 
     <div class="row">
       <div class="pull-left col-xs-12 col-md-6">
-        <h1>Stuff</h1>
-        <%= link_to "home",  root_path, class: "btn btn-default", role: "button" %><br/>
-        <%= link_to "location",  location_path, class: "btn btn-default" %>
+        <h1>Personal</h1>
+        <%= link_to "About Us",  about_path, class: "btn btn-success" %>
       </div>
       <div class="pull-right col-xs-12 col-md-6">
-        <h1>Stuff 2</h1>
-        <%= link_to "About Us",  about_path, class: "btn btn-default" %><br/>
-        <%= link_to "Wedding Day",  wedding_path, class: "btn btn-default" %>
+        <h1>Information</h1>
+        <%= link_to "location",  location_path, class: "btn btn-warning" %><br/>
+        <%= link_to "Wedding Day",  wedding_path, class: "btn btn-info" %>
       </div>
 
       <!-- <div class="hidden-xs col-md-4">
