--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,13 @@
     <%= render 'layouts/header' %>
 
     <div class="row">
+      <div class="nav nav-pills text-center">
+        <!-- need to change 'navigation_path' to a welcome page -->
+        <%= link_to "Welcome", navigation_path, class: "btn navbar-btn btn-info"%>
+        <%= link_to "Our Story", about_path, class: "btn navbar-btn btn-info" %>
+        <!-- need to create an 'Accomodations' page and set the path -->
+        <%= link_to "Accomodations", location_path, class: "btn navbar-btn btn-info" %>
+      </div>
       <div class="hidden-xs col-md-4">
       </div>
       <div class="col-xs-12 col-md-4">
@@ -13,6 +20,7 @@
         <%= link_to "Navigation",  navigation_path %> -->
         <%= link_to image_tag("Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block"), navigation_path %>
         <p class="text-primary">¡nos casamos!</p>
+        <%= link_to "Wedding Day",  wedding_path, class: "btn btn-info" %>
       </div>
     </div>
   </div>
