--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="nav nav-pills text-center">
         <!-- need to change 'navigation_path' to a welcome page -->
-        <%= link_to "Welcome", navigation_path, class: "btn navbar-btn btn-info"%>
+        <%= link_to "Welcome", welcome_path, class: "btn navbar-btn btn-info"%>
         <%= link_to "Our Story", about_path, class: "btn navbar-btn btn-info" %>
         <!-- need to create an 'Accomodations' page and set the path -->
         <%= link_to "Accomodations", location_path, class: "btn navbar-btn btn-info" %>
