added navbar partial, restyled btn info colors, and set the navbar links to min necessary pages

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -12,3 +12,13 @@
 	font-size: 18px;
 	/*text color -- for sub headings*/
 }
+
+.btn-info {
+  background-color: #E4E4D3;
+  border-color: #FCFBE3;
+}
+
+.btn-info:hover {
+  background-color : #FCFBE3;
+  color: black;
+}
