--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,21 +1,7 @@
 <div class="page-header text-center container">
-<style type="text/css">
-  @font-face {
-    font-family: 'scripalt-webfont';
-    src:font-url('scripalt-webfont.eot');
-    src:font-url('scripalt-webfont.eot') format('embedded-opentype'),
-      font-url('scripalt-webfont.svg') format('svg'),
-      font-url('scripalt-webfont.woff') format('woff'),
-      font-url('scripalt-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
-</style>
-
   <div class="well">
-  <%= link_to "home",  root_path, class: "btn btn-link pull-left", type: "button" %>
     <%= render 'layouts/header' %>
-
+    <%= render 'layouts/navbar' %>
     <div class="row">
       <p>“I love you without knowing how, or when, or from where. I love you simply, without problems or pride: I love you in this way because I do not know any other way of loving but this, in which there is no I or you, so intimate that your hand upon my chest is my hand, so intimate that when I fall asleep your eyes close.”<br/>― Pablo Neruda</p>
       <div class="pull-left col-xs-12 col-md-6">
