--- a/app/views/pages/accomodations.html.erb
+++ b/app/views/pages/accomodations.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#accomodations</h1>
-<p>Find me in app/views/pages/accomodations.html.erb</p>
+<div class="page-header text-center container">
+  <div class="well">
+    <%= render 'layouts/header' %>
+    <%= render 'layouts/navbar' %>
+  </div>
+</div>
