--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -2,9 +2,9 @@
 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
 
 <div class="page-header text-center container">
-
   <div class="well">
     <%= render 'layouts/header' %>
+    <%= render 'layouts/navbar' %>
     <div class="row">
       <div class="col-xs-12 col-md-12 text-primary"><h2>The Brazilian Room</h2></div>
       <div class="pull-left col-xs-12 col-md-6">
@@ -18,27 +18,27 @@
       <p>From Oakland I-580</p>
       <p>From Elsewhere</p>
     </div>
-    <div class="row container">
-      <div id="map" class="pull-right col-xs-4" style='width: 600px; height: 300px;'>
-      </div>
-    </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3148.5724029231947!2d-122.24758748471275!3d37.893681413082504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857be6aaaaaaab%3A0xe8de096c7d88ad61!2sBrazilian+Room!5e0!3m2!1sen!2sus!4v1445583829257" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <!-- <div class="row container">
+      <div id="map" class="pull-right col-xs-4" style='width: 600px; height: 300px;'></div>
+    </div> -->
   </div>
 </div>
-<% @users.each do |user| %>
-  <% user.latitude %>
-  <% user.longitude %>
-  <% user.address %>
-  <% user.description %>
-  <% user.title %>
-<% end %>
+# <% @users.each do |user| %>
+#   <% user.latitude %>
+#   <% user.longitude %>
+#   <% user.address %>
+#   <% user.description %>
+#   <% user.title %>
+# <% end %>
 
 
 
-<script type="text/javascript">
-  handler = Gmaps.build('Google');
-  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-    markers = handler.addMarkers(<%=raw @hash.to_json %>);
-    handler.bounds.extendWith(markers);
-    handler.fitMapToBounds();
-  });
-</script>
+# <script type="text/javascript">
+#   handler = Gmaps.build('Google');
+#   handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+#     markers = handler.addMarkers(<%=raw @hash.to_json %>);
+#     handler.bounds.extendWith(markers);
+#     handler.fitMapToBounds();
+#   });
+# </script>
