--- a/app/views/pages/wedding.html.erb
+++ b/app/views/pages/wedding.html.erb
@@ -1,9 +1,7 @@
 <div class="page-header text-center container">
-
   <div class="well">
-  <%= link_to "home",  root_path, class: "btn btn-link pull-left", type: "button" %>
     <%= render 'layouts/header' %>
-
+    <%= render 'layouts/navbar' %>
     <div class="row">
       <p>“Life is a long journey<br/>Just hold my hand<br/>and walk together<br/>and be there with me<br/>always."</p>
       <div class="pull-left col-xs-12 col-md-6">
