create registry page, add macy's registry link

--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -3,11 +3,10 @@
     <%= render 'layouts/header' %>
     <%= render 'layouts/navbar' %>
     <div class="row">
-      <div class="hidden-xs col-md-4">
-      </div>
       <div class="col-xs-12 col-md-4">
-        <%= link_to image_tag("Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block"), navigation_path %>
-        <p class="text-primary">¡nos casamos!</p>
+        <a href="http://www1.macys.com/registry/wedding/guest/?registryId=6469354">
+          <%= image_tag "macys.png", class: "med-img" %>
+        </a>
       </div>
     </div>
   </div>
