--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -16,9 +16,17 @@
 .btn-info {
   background-color: #E4E4D3;
   border-color: #FCFBE3;
+  color: black;
 }
 
 .btn-info:hover {
   background-color : #FCFBE3;
   color: black;
+}
+
+.med-img {
+  height: auto;
+  width: auto;
+  max-height: 100px;
+  max-width: 400px;
 }
