--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,11 @@
 <div class="row">
   <div class="nav nav-pills text-center">
     <% nav_links.each do |link| %>
-      <% next if current_page? link[:path] %>
-      <%= link_to link[:text], link[:path], class: "btn navbar-btn btn-info" %>
+      <% if current_page? link[:path] %>
+        <%= link_to link[:text], link[:path], class: "btn navbar-btn btn-info active" %>
+      <% else %>
+        <%= link_to link[:text], link[:path], class: "btn navbar-btn btn-info" %>
+      <% end %>
     <% end %>
   </div>
 </div>
