--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,8 @@
       </div>
       <div class="col-xs-12 col-md-4">
         <%= link_to image_tag("Amalia&Gary_037_c.png", class: "img-circle img-responsive center-block"), navigation_path %>
-        <p class="text-primary">¡nos casamos!</p>
+        <%= link_to 'Log In', new_user_session_path, class: "btn navbar-btn btn-default" %>
+        <%= link_to 'Sign Up', new_user_registration_path, class: "btn navbar-btn btn-default" %>
       </div>
     </div>
   </div>
