added background image and corrected file extension

--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -10,19 +10,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="BrazilianRoom.jpeg" alt="BrazilianRoom.jpeg">
+      <img src="BrazilianRoom.jpg" alt="BrazilianRoom.jpeg">
     </div>
 
     <div class="item">
-      <%= image_tag "BrazilianRoom.jpeg"%>
+      <%= image_tag "BrazilianRoom.jpg"%>
     </div>
 
     <div class="item">
-      <%= image_tag "BrazilianRoom.jpeg"%>
+      <%= image_tag "BrazilianRoom.jpg"%>
     </div>
 
     <div class="item">
-      <img src="BrazilianRoom.jpeg" alt="Flower">
+      <img src="BrazilianRoom.jpg" alt="Flower">
     </div>
   </div>
 
