--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -11,7 +11,7 @@
         <h3>Tilden Regional Park<br/>Berkeley, California</h3>
       </div>
       <div class="pull-right col-xs-12 col-md-6">
-        <%= image_tag "BrazilianRoom.jpeg"%>
+        <%= image_tag "BrazilianRoom.jpg"%>
       </div>
       <p>Driving Directions</p>
       <p>From San Francisco</p>
