--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,12 @@
 @import 'bootstrap';
 
+body {
+  background-image:url(image_path('Amalia&Gary_034.jpg'));
+  background-size: 150%;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 .well {
 	background-color: rgba(191, 173, 152, 0.85);
 	/*minion yellow: pantone #ffcc00*/
