separate users from places and ran migrations

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -3,7 +3,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Users</h1>
+<h1>Listing Places</h1>
 
 <table>
   <thead>
@@ -18,16 +18,16 @@
   </thead>
 
   <tbody>
-    <% @users.each do |user| %>
+    <% @places.each do |place| %>
       <tr>
-        <td><%= user.latitude %></td>
-        <td><%= user.longitude %></td>
-        <td><%= user.address %></td>
-        <td><%= user.description %></td>
-        <td><%= user.title %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= place.latitude %></td>
+        <td><%= place.longitude %></td>
+        <td><%= place.address %></td>
+        <td><%= place.description %></td>
+        <td><%= place.title %></td>
+        <td><%= link_to 'Show', place %></td>
+        <td><%= link_to 'Edit', edit_place_path(place) %></td>
+        <td><%= link_to 'Destroy', place, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -35,7 +35,7 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New place', new_place_path %>
 
 <div style='width: 800px;'>
   <div id="map" style='width: 800px; height: 400px;'></div>
