--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,28 +2,28 @@
 
 <p>
   <strong>Latitude:</strong>
-  <%= @user.latitude %>
+  <%= @place.latitude %>
 </p>
 
 <p>
   <strong>Longitude:</strong>
-  <%= @user.longitude %>
+  <%= @place.longitude %>
 </p>
 
 <p>
   <strong>Address:</strong>
-  <%= @user.address %>
+  <%= @place.address %>
 </p>
 
 <p>
   <strong>Description:</strong>
-  <%= @user.description %>
+  <%= @place.description %>
 </p>
 
 <p>
   <strong>Title:</strong>
-  <%= @user.title %>
+  <%= @place.title %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_place_path(@place) %> |
+<%= link_to 'Back', places_path %>
