--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -24,12 +24,12 @@
     </div> -->
   </div>
 </div>
-# <% @users.each do |user| %>
-#   <% user.latitude %>
-#   <% user.longitude %>
-#   <% user.address %>
-#   <% user.description %>
-#   <% user.title %>
+# <% @places.each do |place| %>
+#   <% place.latitude %>
+#   <% place.longitude %>
+#   <% place.address %>
+#   <% place.description %>
+#   <% place.title %>
 # <% end %>
 
 
