--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,34 @@
  *= require_tree .
  *= require_self
  */
+
+@font-face {
+  font-family: 'Scriptina';
+  src: url('fonts/scriptina/scripalt-webfont.eot');
+  src: url('fonts/scriptina/scripalt-webfont.woff') format('woff');
+  src: url('fonts/scriptina/scripalt-webfont.ttf') format('truetype');
+  src: url('fonts/scriptina/scripalt-webfont.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'FontName';
+  src: url('fonts/FontName.eot');
+  src: url('fonts/FontName.eot?#iefix') format('embedded-opentype'),
+    url('fonts/FontName-webfont.woff') format('woff'),
+    url('fonts/FontName-webfont.ttf') format('truetype'),
+    url('fonts/FontName-webfont.svg#FontName') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Scriptina2';
+  src: url('scriptin-webfont.eot');
+  src: url('scriptin-webfont.woff') format('woff');
+  src: url('scriptin-webfont.ttf') format('truetype');
+  src: url('scriptin-webfont.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
