--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -9,14 +9,58 @@
       <div class="col-xs-12 col-md-12 text-primary"><h2>The Brazilian Room</h2></div>
       <div class="pull-left col-xs-12 col-md-6">
         <h3>Tilden Regional Park<br/>Berkeley, California</h3>
+        <p>One of the District's three oldest parks, Tilden has been called the jewel of the system,
+          and its recreational activities have become a happy tradition for generations of East Bay
+          youngsters. From a carousel ride and a picnic to a swim at Lake Anza and a stroll through
+          the Botanic Garden, Tilden has variety to delight everyone. Yet there are plenty of quiet
+          places in Tilden's 2,079 acres to shelter the wildlife and preserve natural beauty. Tilden
+          was named for Charles Lee Tilden, first president of the Park District Board of Directors.
+          The park is reached via Canon Drive, Shasta Road, or South Park Drive, all off Grizzly Peak
+          Boulevard in Berkeley.</p>
+        <p>You can read more about the park <a href="http://www.ebparks.org/parks/tilden">at their website, here</a></p>
       </div>
       <div class="pull-right col-xs-12 col-md-6">
         <%= image_tag "BrazilianRoom.jpg"%>
       </div>
-      <p>Driving Directions</p>
-      <p>From San Francisco</p>
-      <p>From Oakland I-580</p>
-      <p>From Elsewhere</p>
+      <div class="col-xs-12 col-md-12">
+        <h3 class="col-xs-12 col-md-12">Driving Directions</h3>
+        <div class="text-left col-xs-12 col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d201869.9004248678!2d-122.47978766431298!3d37.761505181062326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m5!1s0x808f778c55555555%3A0xa4f25c571acded3f!2sSan+Francisco+International+Airport%2C+San+Francisco%2C+CA!3m2!1d37.6213129!2d-122.3789554!4m3!3m2!1d37.8936772!2d-122.24539879999999!5e0!3m2!1sen!2sus!4v1445719333376"
+                  frameborder="0" height="300" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
+        </div>
+        <div class="text-left col-xs-12 col-md-6">
+          <h5>From San Francisco Airport</h5>
+          <br/><p class="text-left">From Highway 80 Eastbound<br/>
+            Exit at <strong>University Avenue</strong> in Berkeley.<br/>
+            Follow University up (east) to Oxford.<br/>
+            <strong>Left</strong> on Oxford to Rose.<br/>
+            <strong>Right</strong> on Rose to Spruce.<br/>
+            <strong>Left</strong> on Spruce on the top of the hill, cross the intersection, and Spruce becomes Wildcat Canyon Road.
+            <br/>Continue for two miles and the <strong>Brazilian Room</strong> will be on your left.</p>
+        </div>
+
+        <div class="text-left col-xs-12 col-md-12">
+          <h5>From Oakland Airport</h5>
+        </div>
+        <div class="text-left col-xs-12 col-md-12">
+          <h5 class="pull-left col-xs-12 col-md-6">From San Francisco</h5>
+        </div>
+        <div class="text-left col-xs-12 col-md-12">
+          <h5 class="pull-left col-xs-12 col-md-12">From South Bay</h5>
+        </div>
+        <div class="text-left col-xs-12 col-md-12">
+          <h5 class="pull-left col-xs-12 col-md-12>de Barcelona</h5>
+        </div>
+        <div class="text-left col-xs-12 col-md-12">
+          <h5 class="pull-left col-xs-12 col-md-12">From Walnut Creek and East</h5>
+          <p>From Highway 24:
+            At east end of Caldecott Tunnel, exit Fish Ranch Road up to Grizzly Peak Boulevard.
+            Turn right and continue to Golf Course Road.
+            Right again and continue to stop sign.
+            Right on Shasta Road.
+            Shasta dead-ends into Brazilian Room parking lot.</p>
+        </div>
+      </div>
     </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3148.5724029231947!2d-122.24758748471275!3d37.893681413082504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857be6aaaaaaab%3A0xe8de096c7d88ad61!2sBrazilian+Room!5e0!3m2!1sen!2sus!4v1445583829257" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     <!-- <div class="row container">
