--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -1,15 +1,16 @@
-<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
-<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
+<!--for GMAPs gem-->
+<!--<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>-->
+<!--<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>-->
 
-<div class="page-header text-center container">
-  <div class="well">
+<!--<div class="container">-->
+  <div class="page-header text-center well">
     <%= render 'layouts/header' %>
     <%= render 'layouts/navbar' %>
     <div class="row">
       <div class="col-xs-12 col-md-12 text-primary"><h2>The Brazilian Room</h2></div>
       <div class="pull-left col-xs-12 col-md-6">
         <h3>Tilden Regional Park<br/>Berkeley, California</h3>
-        <p>One of the District's three oldest parks, Tilden has been called the jewel of the system,
+        <p class="text-justify">One of the District's three oldest parks, Tilden has been called the jewel of the system,
           and its recreational activities have become a happy tradition for generations of East Bay
           youngsters. From a carousel ride and a picnic to a swim at Lake Anza and a stroll through
           the Botanic Garden, Tilden has variety to delight everyone. Yet there are plenty of quiet
@@ -17,10 +18,10 @@
           was named for Charles Lee Tilden, first president of the Park District Board of Directors.
           The park is reached via Canon Drive, Shasta Road, or South Park Drive, all off Grizzly Peak
           Boulevard in Berkeley.</p>
-        <p>You can read more about the park <a href="http://www.ebparks.org/parks/tilden">at their website, here</a></p>
+        <p class="text-justify">You can read more about the park <a href="http://www.ebparks.org/parks/tilden">at their website, here</a></p>
       </div>
       <div class="pull-right col-xs-12 col-md-6">
-        <%= image_tag "BrazilianRoom.jpg"%>
+        <%= image_tag "BrazilianRoom.jpg", class: "col-xs-12 col-md-10"%>
       </div>
       <div class="col-xs-12 col-md-12">
         <h3 class="col-xs-12 col-md-12">Driving Directions</h3>
@@ -43,16 +44,16 @@
           <h5>From Oakland Airport</h5>
         </div>
         <div class="text-left col-xs-12 col-md-12">
-          <h5 class="pull-left col-xs-12 col-md-6">From San Francisco</h5>
+          <h5>From San Francisco</h5>
         </div>
         <div class="text-left col-xs-12 col-md-12">
-          <h5 class="pull-left col-xs-12 col-md-12">From South Bay</h5>
+          <h5>From South Bay</h5>
         </div>
         <div class="text-left col-xs-12 col-md-12">
-          <h5 class="pull-left col-xs-12 col-md-12>de Barcelona</h5>
+          <h5>de Barcelona</h5>
         </div>
         <div class="text-left col-xs-12 col-md-12">
-          <h5 class="pull-left col-xs-12 col-md-12">From Walnut Creek and East</h5>
+          <h5>From Walnut Creek and East</h5>
           <p>From Highway 24:
             At east end of Caldecott Tunnel, exit Fish Ranch Road up to Grizzly Peak Boulevard.
             Turn right and continue to Golf Course Road.
@@ -62,12 +63,15 @@
         </div>
       </div>
     </div>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3148.5724029231947!2d-122.24758748471275!3d37.893681413082504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857be6aaaaaaab%3A0xe8de096c7d88ad61!2sBrazilian+Room!5e0!3m2!1sen!2sus!4v1445583829257" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    <!-- <div class="row container">
-      <div id="map" class="pull-right col-xs-4" style='width: 600px; height: 300px;'></div>
-    </div> -->
+    <div class="row">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3148.5724029231947!2d-122.24758748471275!3d37.893681413082504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857be6aaaaaaab%3A0xe8de096c7d88ad61!2sBrazilian+Room!5e0!3m2!1sen!2sus!4v1445583829257"
+            height="450" frameborder="0" style="border:0" allowfullscreen class="col-xs-12 col-md-10"></iframe>
+      <!-- <div class="row container">
+        <div id="map" class="pull-right col-xs-4" style='width: 600px; height: 300px;'></div>
+      </div> -->
+    </div>
   </div>
-</div>
+<!--</div>-->
 
 <!--
  <%# @places.each do |place| %>
