media break points for device sizing

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -13,13 +13,13 @@ body {
 	border-color: rgba(191, 173, 152, 0.4);
 	/* un azul que me gusta #39879E;*/
   p {
-    font-family: Scriptina;
+    //font-family: Scriptina;
   }
 }
 .text-primary {
 	color: #1719A2;
 	font-size: 18px;
-  font-family: Scriptina;
+  //font-family: Scriptina;
 	/*text color -- for sub headings*/
 }
 
