tested out two fonts Eutemia and scriptina

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -9,11 +9,9 @@ body {
 
 .well {
 	background-color: rgba(191, 173, 152, 0.85);
-	/*minion yellow: pantone #ffcc00*/
 	border-color: rgba(191, 173, 152, 0.4);
-	/* un azul que me gusta #39879E;*/
   p {
-    //font-family: Scriptina;
+    font-family: verdana, arial, helvetica, sans-serif;
   }
 }
 .text-primary {
