--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,9 +8,7 @@
 
       </div>
       <div class="pull-right col-xs-12 col-md-6">
-        <h1 style="font-family: scripalt-webfont;">La historia de Amàlia y Gary</h1>
-        <!-- <p>Amàlia and Gary</p> -->
-
+        <h1>La historia de Amàlia y Gary</h1>
         <p>Our Love story starts with a chance meeting, unexpected and spontaneous. </p>
         <p>Amàlia moved to the United States in April 2013, to Oakland. Renting a car to start, she bought her first car on June 1st 2013 and promptly returned her rental the next day to the airport. After returning the car, she ventured to the train platform to head home when a stranger walked up to her and pointed out that: 'You don't have luggage!'. Following the european tradition of rarely talking to strangers in public transports, she first ignored the spontaneous salutation...</p>
         <p>Gary, living in San Francisco, went to Denver, Colorado, that same weekend, to see two amazing people tying the knot and celebrate their big day. Flying home Sunday afternoon, he was in a great mood! Walking from the airplane to the SFO Bart station, suddenly he sees this gorgeous lady standing in front of him at the bottom of the escalator. Let's say hi!</p>
