--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
 <div class="page-header">
   <p class="text-primary hidden-xs">27 March 2016</p>
-  <h1>Amàlia and Gary</h1>
+  <h1 class="fancy-font"><strong>Amàlia and Gary</strong></h1>
 </div>
