--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -7,7 +7,10 @@
     <%= render 'layouts/header' %>
     <%= render 'layouts/navbar' %>
     <div class="row">
-      <div class="col-xs-12 col-md-12 text-primary"><h2>The Brazilian Room</h2></div>
+      <div class="col-xs-12 col-md-12 text-primary"><h2 class="fancy-font">The Brazilian Room</h2></div>
+      <div class="pull-right col-xs-12 col-md-6">
+        <%= image_tag "BrazilianRoom.jpg", class: "col-xs-12 col-md-10"%>
+      </div>
       <div class="pull-left col-xs-12 col-md-6">
         <h3>Tilden Regional Park<br/>Berkeley, California</h3>
         <p class="text-justify">One of the District's three oldest parks, Tilden has been called the jewel of the system,
@@ -20,29 +23,35 @@
           Boulevard in Berkeley.</p>
         <p class="text-justify">You can read more about the park <a href="http://www.ebparks.org/parks/tilden">at their website, here</a></p>
       </div>
-      <div class="pull-right col-xs-12 col-md-6">
-        <%= image_tag "BrazilianRoom.jpg", class: "col-xs-12 col-md-10"%>
-      </div>
       <div class="col-xs-12 col-md-12">
         <h3 class="col-xs-12 col-md-12">Driving Directions</h3>
-        <div class="text-left col-xs-12 col-md-6">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d201869.9004248678!2d-122.47978766431298!3d37.761505181062326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m5!1s0x808f778c55555555%3A0xa4f25c571acded3f!2sSan+Francisco+International+Airport%2C+San+Francisco%2C+CA!3m2!1d37.6213129!2d-122.3789554!4m3!3m2!1d37.8936772!2d-122.24539879999999!5e0!3m2!1sen!2sus!4v1445719333376"
-                  frameborder="0" height="300" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
-        </div>
-        <div class="text-left col-xs-12 col-md-6">
-          <h5>From San Francisco Airport</h5>
-          <br/><p class="text-left">From Highway 80 Eastbound<br/>
-            Exit at <strong>University Avenue</strong> in Berkeley.<br/>
-            Follow University up (east) to Oxford.<br/>
-            <strong>Left</strong> on Oxford to Rose.<br/>
-            <strong>Right</strong> on Rose to Spruce.<br/>
-            <strong>Left</strong> on Spruce on the top of the hill, cross the intersection, and Spruce becomes Wildcat Canyon Road.
-            <br/>Continue for two miles and the <strong>Brazilian Room</strong> will be on your left.</p>
+        <div class="col-xs-12 col-md-12">
+          <div class="text-left col-xs-12 col-md-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d201869.9004248678!2d-122.47978766431298!3d37.761505181062326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m5!1s0x808f778c55555555%3A0xa4f25c571acded3f!2sSan+Francisco+International+Airport%2C+San+Francisco%2C+CA!3m2!1d37.6213129!2d-122.3789554!4m3!3m2!1d37.8936772!2d-122.24539879999999!5e0!3m2!1sen!2sus!4v1445719333376"
+                    frameborder="0" height="200" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
+          </div>
+          <div class="text-left col-xs-12 col-md-6">
+            <h5>From San Francisco Airport</h5>
+            <br/><p class="text-left">From Highway 80 Eastbound<br/>
+              Exit at <strong>University Avenue</strong> in Berkeley.<br/>
+              Follow University up (east) to Oxford.<br/>
+              <strong>Left</strong> on Oxford to Rose.<br/>
+              <strong>Right</strong> on Rose to Spruce.<br/>
+              <strong>Left</strong> on Spruce on the top of the hill, cross the intersection, and Spruce becomes Wildcat Canyon Road.
+              <br/>Continue for two miles and the <strong>Brazilian Room</strong> will be on your left.</p>
+          </div>
         </div>
 
-        <div class="text-left col-xs-12 col-md-12">
-          <h5>From Oakland Airport</h5>
+        <div class="col-xs-12 col-md-12">
+          <div class="text-left col-xs-12 col-md-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d100876.40017317691!2d-122.29811845039997!3d37.80439150223062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x808f845402c0a641%3A0xb0630c0f03017460!2sOakland+International+Airport%2C+Airport+Drive%2C+Oakland%2C+CA!3m2!1d37.7125689!2d-122.21974279999999!4m5!1s0x80857c0da1064a0b%3A0xf3b6a1c7c5bc2cbe!2sAnza+View+Rd%2C+Berkeley%2C+CA+94708!3m2!1d37.8937988!2d-122.2459593!5e0!3m2!1sen!2sus!4v1445746475610"
+                    height="300" frameborder="0" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
+          </div>
+          <div class="text-left col-xs-12 col-md-6">
+            <h5>From Oakland Airport</h5>
+          </div>
         </div>
+
         <div class="text-left col-xs-12 col-md-12">
           <h5>From San Francisco</h5>
         </div>
