--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -7,7 +7,7 @@
       <%= image_tag "Amalia&Gary_031crop.png", class: "img img-responsive center-block", :style => "max-width: 60%; height: auto;" %>
       </div>
       <div class="pull-left col-xs-12 col-md-6">
-        <h1>Welcome!</h1>
+        <h1 class="fancy-font">Welcome!</h1>
         <p>We look forward to sharing this special moment in our lives with you.<br/>Please reference this site for any travel information, day of details, and more. If there's something not here, don't hesitate to contact us directly! As people begin to ask more and more questions, we'll add those elements to this site.</p>
         <p><strong>For those of you who travel from lands afar</strong>, please know we are very honored that you are making the journey to join us. To help you become familiar with the Bay Area, we're compiling information which will help you get the most out of your stay. Start by checking out the <%= link_to "Accommodations Page, here", accommodations_path(@parent) %> for places to stay and our travel recommendations.</p>
       </div>
