added font-url and moved font declaration to scss file for heroku compatibility

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -38,3 +38,16 @@ body {
   max-height: 100px;
   max-width: 400px;
 }
+
+@font-face {
+  font-family: 'Scriptina';
+  src: font-url('scriptina.ttf');
+}
+@font-face {
+  font-family: 'Eutemia';
+  src: font-url('Eutemia.ttf');
+}
+
+.fancy-font {
+  font-family: 'Scriptina';
+}
