--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,36 +14,16 @@
  *= require_self
  */
 
+
 /*@font-face {*/
   /*font-family: 'Scriptina';*/
-  /*src: url('fonts/scriptina/scripalt-webfont.eot');*/
-  /*src: url('fonts/scriptina/scripalt-webfont.woff') format('woff');*/
-  /*src: url('fonts/scriptina/scripalt-webfont.ttf') format('truetype');*/
-  /*src: url('fonts/scriptina/scripalt-webfont.svg') format('svg');*/
-  /*font-weight: normal;*/
-  /*font-style: normal;*/
+  /*src: font-url('/assets/scriptina.ttf');*/
 /*}*/
-
 /*@font-face {*/
-  /*font-family: 'FontName';*/
-  /*src: url('fonts/FontName.eot');*/
-  /*src: url('fonts/FontName.eot?#iefix') format('embedded-opentype'),*/
-    /*url('fonts/FontName-webfont.woff') format('woff'),*/
-    /*url('fonts/FontName-webfont.ttf') format('truetype'),*/
-    /*url('fonts/FontName-webfont.svg#FontName') format('svg');*/
-  /*font-weight: normal;*/
-  /*font-style: normal;*/
+  /*font-family: 'Eutemia';*/
+  /*src: font-url('/assets/Eutemia.ttf');*/
 /*}*/
 
-@font-face {
-  font-family: 'Scriptina';
-  src: url('/assets/scriptina.ttf');
-}
-@font-face {
-  font-family: 'Eutemia';
-  src: url('/assets/Eutemia.ttf');
-}
-
-.fancy-font {
-  font-family: 'Scriptina';
-}
+/*.fancy-font {*/
+  /*font-family: 'Scriptina';*/
+/*}*/
