changed hyperlink default colors to standard

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -19,15 +19,15 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #0000EE;
 
   &:visited {
-    color: #666;
+    color: #551A8B;
   }
 
   &:hover {
     color: #fff;
-    background-color: #000;
+//  background-color: #000;
   }
 }
 
