added placeholder images for registry

--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -8,6 +8,25 @@
           <%= image_tag "macys.png", class: "med-img" %>
         </a>
       </div>
+      <div class="col-xs-12 col-md-4">
+        <a href="#">
+          <%= image_tag "macys.png", class: "med-img" %>
+        </a>
+      </div>
+      <div class="col-xs-12 col-md-4">
+        <a href="#">
+          <%= image_tag "macys.png", class: "med-img" %>
+        </a>
+      </div>
+      <div class="col-xs-12 col-md-4">
+        <a href="#">
+          <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/0/07/Spices_in_an_Indian_market.jpg", class: "lg-img" %>
+        </a>
+        <div>
+          <p>More to Come, in the future.</p>
+          <p>Come back and let us now you bought this item!</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
