--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -38,6 +38,12 @@ body {
   max-height: 100px;
   max-width: 400px;
 }
+.lg-img {
+  height: auto;
+  width: auto;
+  max-height: 200px;
+  max-width: 400px;
+}
 
 @font-face {
   font-family: 'Scriptina';
