added Gift model and ability to add elements to Registry

--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -26,6 +26,22 @@
           <p>More to Come, in the future.</p>
           <p>Come back and let us now you bought this item!</p>
         </div>
+        <div>
+          <% @gifts.each do |gift| %>
+              //show a gift using html elements
+              <%= link_to gift.name, gift.url %>
+            <% if !gift.purchased? %>
+
+              <%= form_for gift do |f| %>
+                <%= f.text_field :purchased, :as => :hidden, :input_html => { :value => "true"} %>
+                <%= f.submit "purchased" %>
+                <!-- , confirm: “Continue to  mark this gift as purchased. Thank you so much!”  -->
+              <% end %>
+            <% else %>
+              <%= text_field “Purchased” %>
+            <% end %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
