--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -2,14 +2,38 @@
 
 <%= form_for @gift do |f| %>
   <div class="field">
-    <%= f.label :name %><%= f.text_field :name %><br/>
-    <%= f.label :purchased %><%= f.check_box(:purchased) %><br/>
-    <%= f.label :url %><%= f.text_field :url %><br/>
-    <%= f.submit "Add to list" %>
-  </div>
-  <div class="actions">
+    <p>
+      <%= f.label :name %>
+      <%= f.text_field :name %><br/>
+    </p>
 
+    <p>
+      <%= f.label :purchased %>
+      <%= f.check_box(:purchased) %><br/>
+    </p>
+    <p>
+      <%= f.label :url %>
+      <%= f.text_field :url %><br/>
+    </p>
+
+    <%= f.submit "Add to list" %>
   </div>
 <% end %>
 <!-- My model:
 name:string purchased:boolean url:string  -->
+
+<%= form_for :gift do |f| %>
+  <p>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
+  </p>
+
+  <p>
+    <%= f.label :text %><br>
+    <%= f.text_area :url %>
+  </p>
+
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
