try to fix gifts and collect data

--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Add a new Gift to the Registry</h2>
 
-<%= form_for @gift do |f| %>
+<%= form_for(@new_gift) do |f| %>
   <div class="field">
     <p>
       <%= f.label :name %>
