--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
     <% end %>
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
   </div>
 
 
