work on font sizing w Amalia and welcome wording

--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -28,7 +28,7 @@
         </div>
         <div>
           <% @gifts.first.name %>
-          <p>Referencing first element</p>
+          <p>Help us do stuff!</p>
         </div>
         <div>
           <% @gifts.each do |gift| %>
