removed placeholder macy's images

--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -10,12 +10,12 @@
       </div>
       <div class="col-xs-12 col-md-4">
         <a href="#">
-          <%= image_tag "macys.png", class: "med-img" %>
+          <%# image_tag "macys.png", class: "med-img" %>
         </a>
       </div>
       <div class="col-xs-12 col-md-4">
         <a href="#">
-          <%= image_tag "macys.png", class: "med-img" %>
+          <%# image_tag "macys.png", class: "med-img" %>
         </a>
       </div>
       <div class="col-xs-12 col-md-4">
