--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -37,8 +37,8 @@
             <% if !gift.purchased? %>
 
               <%= form_for gift do |f| %>
-                <%= f.hidden_field :purchased, :as => :hidden, :value => "true" %>
-                <%= f.submit "purchased" %>
+                <%= f.hidden_field :purchased, :as => :hidden, :value => "true", class: "pull-left" %>
+                <%= f.submit "Mark as Purchased", class: "pull-right" %>
                 <!-- , confirm: “Continue to  mark this gift as purchased. Thank you so much!”  -->
               <% end %>
             <% else %>
