able to upload image w/ registry list gift item on development

--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -15,6 +15,10 @@
       <%= f.label :url %>
       <%= f.text_field :url %><br/>
     </p>
+    <div class="form-group">
+      <%= f.label :image %>
+      <%= f.file_field :image, class: "form-control" %>
+    </div>
 
     <%= f.submit "Add to list" %>
   </div>
