--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -1,6 +1,7 @@
 <div>
   <% @gifts.each do |gift| %>
     <!-- show a gift using html elements -->
+    <% image_tag @gift.image.url %>
     <%= link_to gift.name, gift.url %>
     <% if !gift.purchased? %>
 
