--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -24,7 +24,9 @@
             <div class="row col-xs-12 col-md-4 registry-gift">
               <!-- show a gift using html elements -->
               <%= link_to gift.name, gift.url, class: "col-md-6 hang-left" %>
-              <%= image_tag gift.image.url(:medium) %>
+
+              <%= link_to image_tag(gift.image.url(:medium), class: "col-md-6 hang-left"), gift.url %>
+
               <% if !gift.purchased? %>
                 <%= form_for gift do |f| %>
                   <%= f.submit "Mark as Purchased", class: "col-md-6 pull-right" %>
